(env
 (dev
  (flags
   (:standard -w -27-26-32))))

(executable
 (name queens)
 (modules queens)
 (libraries robdd))

(library
 (name robdd)
 (modules
  robdd__BDDType
  robdd__HashConsingHashtbl
  robdd__BDDAssociationMap
  robdd__BDDTupleAssociationMap
  robdd__BDD
  robdd__Not
  robdd__Size
  robdd__And
  robdd__Or)
 (libraries zarith))
