(executable
 (name queens)
 (modules queens)
 (libraries robdd))

(library
 (name robdd)
 (modules
  robdd__BDDType
  robdd__HashConsingHashtbl
  robdd__BDDAssociationMap
  robdd__BDDTupleAssociationMap
  robdd__BDD
  robdd__Not
  robdd__Size
  robdd__And
  robdd__Or
  robdd__Implies
  robdd__Sat
  robdd__AnySat
  robdd__CountSat)
 (libraries zarith))
